5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1671_1100.log
== TEST (2019-04-24 14:46:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal",tartaruga)
elif (valor == 5):
	print("Animal",garca)
elif (valor == 10):
	print("Animal",arara)
elif (valor==20):
	print("Animal",mico-leao-dourado)
elif(valor==50):
	print("Animal",onca-pintada)
elif(valor==100):
	print("Animal",garoupa)
else:
	print("Animal",invalido)
	



		

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal",garoupa)
NameError: name 'garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:46:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal",tartaruga)
elif (valor == 5):
	print("Animal",garca)
elif (valor == 10):
	print("Animal",arara)
elif (valor==20):
	print("Animal",mico-leao-dourado)
elif(valor==50):
	print("Animal",onca-pintada)
elif(valor==100):
	print("Animal",garoupa)
else:
	print("Animal",invalido)
	



		

	
	

-- EXECUTION TIME:
0.186435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 17, in <module>
    print("Animal",garoupa)
NameError: name 'garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal",tartaruga)
elif (valor == 5):
	print("Animal",garca)
elif (valor == 10):
	print("Animal",arara)
elif (valor==20):
	print("Animal",mico-leao-dourado)
elif(valor==50):
	print("Animal",onca-pintada)
elif(valor==100):
	print("Animal",garoupa)
else:
	print("Animal",invalido)
	



		

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal",garoupa)
NameError: name 'garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:48:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:48:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- EXECUTION TIME:
0.16538
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:48:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor ==2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:48:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- EXECUTION TIME:
0.203695
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:49:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- EXECUTION TIME:
0.16862
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: tartaruga")
elif (valor == 5):
	print("Animal: garca")
elif (valor == 10):
	print("Animal: arara")
elif (valor==20):
	print("Animal: mico-leao-dourado")
elif(valor==50):
	print("Animal: onca-pintada")
elif(valor==100):
	print("Animal: garoupa")
else:
	print("Animal: invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor==20):
	print("Animal: Mico-leao-dourado")
elif(valor==50):
	print("Animal: Onca-pintada")
elif(valor==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:50:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor==20):
	print("Animal: Mico-leao-dourado")
elif(valor==50):
	print("Animal: Onca-pintada")
elif(valor==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	



		

	
	

-- EXECUTION TIME:
0.197866
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada", valor)
if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor==20):
	print("Animal: Mico-leao-dourado")
elif(valor==50):
	print("Animal: Onca-pintada")
elif(valor==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	



		

	
	

-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:53:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada:", valor)
if (valor == 2):
	print("Animal:", "Tartaruga")
elif (valor == 5):
	print("Animal:", "Garca")
elif (valor == 10):
	print("Animal:", "Arara")
elif (valor== 20):
	print("Animal:", "Mico-leao-dourado")
elif(valor== 50):
	print("Animal:", "Onca-pintada")
elif(valor== 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")
	



		

	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:53:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Valor da cedula: "))
print("Entrada:", valor)
if (valor == 2):
	print("Animal:", "Tartaruga")
elif (valor == 5):
	print("Animal:", "Garca")
elif (valor == 10):
	print("Animal:", "Arara")
elif (valor== 20):
	print("Animal:", "Mico-leao-dourado")
elif(valor== 50):
	print("Animal:", "Onca-pintada")
elif(valor== 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")
	



		

	
	

-- EXECUTION TIME:
0.143827
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
